minimum setup for mongodb

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=re6HBhco5jErqVHyZuDdddAfL1DN2CDM
-
+DB_CONNECTION=mongodb
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_USER=admin
+DB_PASSWORD=
+DB_DATABASES=notesgate
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
