--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ APP_KEY=re6HBhco5jErqVHyZuDdddAfL1DN2CDM
 DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
 DB_PORT=27017
-DB_USER=admin
-DB_PASSWORD=
+DB_USER=ppl
+DB_PASSWORD=ppl
 DB_DATABASES=notesgate
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
