--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
     "adonis-mongoose-model": "^3.0.1",
-    "mongoose": "^5.5.3"
+    "lucid-mongo": "^3.1.5",
+    "mongoose": "^5.5.3",
+    "validator": "^10.11.0"
   },
   "devDependencies": {},
   "autoload": {
