--- a/.env
+++ b/.env
@@ -11,5 +11,8 @@ DB_PORT=27017
 DB_USER=ppl
 DB_PASSWORD=ppl
 DB_DATABASES=notesgate
+SMTP_HOST= 
+MAIL_USERNAME= 
+MAIL_PASSWORD= 
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
