add mail register

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_PORT=27017
 DB_USER=ppl
 DB_PASSWORD=ppl
 DB_DATABASES=notesgate
-SMTP_HOST= 
-MAIL_USERNAME= 
-MAIL_PASSWORD= 
+SMTP_HOST=smtp.gmail.com
+MAIL_USERNAME=root.devp@gmail.com
+MAIL_PASSWORD=kode-48MZA
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
