--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "adonis-mongoose-model": "^3.0.1",
     "lucid-mongo": "^3.1.5",
     "mongoose": "^5.5.3",
+    "nodemailer": "^6.1.1",
     "validator": "^10.11.0"
   },
   "devDependencies": {},
