--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_USER=ppl
 DB_PASSWORD=ppl
 DB_DATABASES=notesgate
 SMTP_HOST=smtp.gmail.com
-MAIL_USERNAME=root.devp@gmail.com
-MAIL_PASSWORD=kode-48MZA
+MAIL_USERNAME=
+MAIL_PASSWORD=
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
